--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <span class="counter" id="daysLeft">...</span>
       <span class="unit">days</span>
     </div>
-    <div class="date">Target date: December 31, 2031</div>
+    <div class="date">Target date: July, 24, 2031</div>
   </div>
 
   <script>
