--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <div class="content">
-    <h1>Day Left Until Retirement</h1>
+    <h1>Days Left Until Retirement</h1>
     <div>
       <span class="counter" id="daysLeft">...</span>
       <span class="unit">days</span>
@@ -100,4 +100,5 @@
   </script>
 </body>
 </html>
+
 
